# compiladores

./: CMakeLists.txt  Doxyfile  parser.y  scanner.l
include/: code.h  comp_dict.h  comp_graph.h  comp_list.h  comp_symbols.h  comp_tree.h  iks_ast.h  main.h  semantic.h  tac.h
src/: code.c  comp_dict.c  comp_graph.c  comp_list.c  comp_symbols.c  comp_tree.c  iks_ast.c  main.c  semantic.c  tac.c
tests/: #test_list.c#  bubble_sort.iks  dummy.iks  dummy2.iks  insert_list.iks  main_aval_e1.c  test_dict.c  test_graph.c  test_list.c  test_tree.c
